--- a/result.html
+++ b/result.html
@@ -10330,7 +10330,7 @@
                                                          data-click="{'rsv_re_ename':'谢谢','rsv_re_uri':'3f30a2f7476349dc8a8519ace6fe312e'}">
                                                         <div class="opr-recommends-merge-p">
                                                             <a target="_self" href="javascript:;">
-                                                                <img src="http://upload.mnw.cn/2018/0814/1534238469688.jpg"
+                                                                <img src="http://upload.mnw.cn/2018/0814/1534238469688.JPG"
                                                                      class="c-img c-img4 opr-recommends-merge-img"></a>
                                                             <a class="opr-recommends-merge-mask" target="_self"
                                                                href="javascript:;"></a>
@@ -10342,7 +10342,7 @@
                                                          data-click="{'rsv_re_ename':'怙恶不悛','rsv_re_uri':'6a9880873dcd4e22b113ff95f9b3518c'}">
                                                         <div class="opr-recommends-merge-p">
                                                             <a target="_self" href="javascript:;"><img
-                                                                    src="http://upload.mnw.cn/2018/0814/1534238533285.jpg"
+                                                                    src="http://upload.mnw.cn/2018/0814/1534238533285.JPG"
                                                                     class="c-img c-img4 opr-recommends-merge-img"></a>
                                                             <a class="opr-recommends-merge-mask" target="_self"
                                                                href="javascript:;"></a>
@@ -10354,7 +10354,7 @@
                                                          data-click="{'rsv_re_ename':'无语','rsv_re_uri':'5a8b1f6aeb344c22824de8c8e2b3932d'}">
                                                         <div class="opr-recommends-merge-p">
                                                             <a target="_self" href="javascript:;"><img
-                                                                    src="http://upload.mnw.cn/2018/0814/1534238527856.jpg"
+                                                                    src="http://upload.mnw.cn/2018/0814/1534238527856.JPG"
                                                                     class="c-img c-img4 opr-recommends-merge-img"></a>
                                                             <a class="opr-recommends-merge-mask" target="_self"
                                                                href="javascript:;"></a>
@@ -10385,7 +10385,7 @@
                                                          data-click="{'rsv_re_ename':'好像','rsv_re_uri':'fb2bc6a111344a699f3e6a0ae5efca73'}">
                                                         <div class="opr-recommends-merge-p">
                                                             <a target="_self" href="javascript:;"><img
-                                                                    src="http://upload.mnw.cn/2018/0814/1534238522704.jpg"
+                                                                    src="http://upload.mnw.cn/2018/0814/1534238522704.JPG"
                                                                     data-b64-id="1870460053_2750846622_58"
                                                                     class="c-img c-img4 opr-recommends-merge-img"></a>
                                                             <a class="opr-recommends-merge-mask" target="_self"
@@ -10398,7 +10398,7 @@
                                                          data-click="{'rsv_re_ename':'尴尬','rsv_re_uri':'ef5f4dd9033f484e8b74f3bbdd997e8e'}">
                                                         <div class="opr-recommends-merge-p" id="lover">
                                                             <a target="_self" href="javascript:;"><img
-                                                                    src="images/lover1.jpg"
+                                                                    src="images/lover1.JPG"
                                                                     data-b64-id="1356031244_4184783259_58"
                                                                     class="c-img c-img4 opr-recommends-merge-img"></a>
                                                             <a class="opr-recommends-merge-mask" target="_self"
@@ -10411,7 +10411,7 @@
                                                          data-click="{'rsv_re_ename':'你们','rsv_re_uri':'e4d4c452e2224a50b14f78d29922ee4c'}">
                                                         <div class="opr-recommends-merge-p">
                                                             <a target="_self" href="javascript:;"><img
-                                                                    src="http://upload.mnw.cn/2018/0814/1534238517262.jpg"
+                                                                    src="http://upload.mnw.cn/2018/0814/1534238517262.JPG"
                                                                     data-b64-id="4014817800_409926055_58"
                                                                     class="c-img c-img4 opr-recommends-merge-img"></a>
                                                             <a class="opr-recommends-merge-mask" target="_self"
@@ -10426,7 +10426,7 @@
                                                          data-click="{'rsv_re_ename':'词语','rsv_re_uri':'eef583e4a993497787f59d041d7a2ae3'}">
                                                         <div class="opr-recommends-merge-p">
                                                             <a target="_self" href="javascript:;"><img
-                                                                    src="http://upload.mnw.cn/2018/0814/1534238498984.jpg"
+                                                                    src="http://upload.mnw.cn/2018/0814/1534238498984.JPG"
                                                                     data-b64-id="211622640_3620576003_58"
                                                                     class="c-img c-img4 opr-recommends-merge-img"></a>
                                                             <a class="opr-recommends-merge-mask" target="_self"
@@ -10440,7 +10440,7 @@
                                                          style="margin-top: 3px;">
                                                         <div class="opr-recommends-merge-p">
                                                             <a target="_self" href="javascript:;"><img
-                                                                    src="http://upload.mnw.cn/2018/0814/1534238487545.jpg"
+                                                                    src="http://upload.mnw.cn/2018/0814/1534238487545.JPG"
                                                                     class="c-img c-img4 opr-recommends-merge-img"></a>
                                                             <a class="opr-recommends-merge-mask" target="_self"
                                                                href="javascript:;" style=""></a>
@@ -10452,7 +10452,7 @@
                                                          data-click="{'rsv_re_ename':'仿佛','rsv_re_uri':'49987c6f64494cd68b6dbed8dd13ab3f'}">
                                                         <div class="opr-recommends-merge-p">
                                                             <a target="_self" href="javascript:;"><img
-                                                                    src="http://upload.mnw.cn/2018/0814/1534238476509.jpg"
+                                                                    src="http://upload.mnw.cn/2018/0814/1534238476509.JPG"
                                                                     class="c-img c-img4 opr-recommends-merge-img"></a>
                                                             <a class="opr-recommends-merge-mask" target="_self"
                                                                href="javascript:;"></a>
@@ -10555,7 +10555,7 @@
                     <div class="c-row c-gap-top-small">
                         <div class="general_image_pic c-span6"><a class="c-img6" style="height:75px" href="javascript:;"
                                                                   target="_self"><img class="c-img c-img6"
-                                                                                      src="images/pic11.jpg"
+                                                                                      src="images/pic11.JPG"
                                                                                       style="height:75px;"></a></div>
                         <div class="c-span18 c-span-last">
                             <div class="c-abstract">陈天舒1-1</div>
@@ -10592,7 +10592,7 @@
                             <div class="op-bk-polysemy-imgWrap OP_LOG_BTN"
                                  data-url="http://www.baidu.com/link?url=2UyZke3nX7z-repkdOautH7KLfKj9p1yZ5vhXZS6MPUgjxLhX8hTtLWxAiP9cntEXLv-w2NY7TKgyxtv37yF_1wt1DVZFW4RfVGNdfSzLogHmg-zxaaPkfqcfcGrQrrY">
                                 <div class="c-img c-img6"
-                                     style="height: 91px; background: url(images/pic22.jpg) no-repeat center center; background-size: cover;">
+                                     style="height: 91px; background: url(images/pic22.JPG) no-repeat center center; background-size: cover;">
                                 </div>
                                 <i class="op-bk-polysemy-icon" style="top:25.5px"></i>
                                 <div class="op-bk-polysemy-logo"></div>
@@ -10660,7 +10660,7 @@
                     <div class="c-row c-gap-top-small">
                         <div class="general_image_pic c-span6"><a class="c-img6" style="height:75px" href="javascript:;"
                                                                   target="_self"><img class="c-img c-img6"
-                                                                                      src="images/pic33.jpg"
+                                                                                      src="images/pic33.JPG"
                                                                                       style="height:75px;"></a></div>
                         <div class="c-span18 c-span-last">
                             <div class="c-abstract">陈天舒5-1</div>
@@ -10748,7 +10748,7 @@
                             <td class="op-tieba-general-firsttd" colspan="3">
                                 <div class="op-tieba-general-mainpic"><a class="op-tieba-general-photo-link"
                                                                          href="javascript:;" target="_self"><img
-                                        class="c-img4" src="./images/pic44.jpg"></a>
+                                        class="c-img4" src="./images/pic44.JPG"></a>
                                 </div>
                                 <div class="op-tieba-general-main-col op-tieba-general-main-con">
                                     <p class="c-gray">想带给你所有的欢乐</p>
