--- a/show.html
+++ b/show.html
@@ -95,9 +95,10 @@
 
 </head>
 
+
 <body>
 <div class="cs">
-    <img src="images/lover1.jpg" id="logo">
+    <img src="images/lover1.JPG" id="logo">
 </div>
 <canvas class="canvas" width="1820" height="905"></canvas>
 <p class="text" style="color: #ed3073;">
